# openandroidinstaller-dev.github.io

./: CNAME  LICENSE  Makefile  README.md  build.py  faq.html  feedback.html  index.html  pyproject.toml  style.css  styles.css  supported-devices.html
.github/workflows/: build-pr.yml  build.yml  pages.yml
mybulma/sass/: mystyles.scss
public/: .htaccess  404.html  contribute.html  download.html  faq.html  feedback.html  funding.json  imprint.html  index.html  privacy.html  sitemap.xml  styles.css  supported-devices.html
public/.well-known/: org.flathub.VerifiedApps.txt
public/static/: custom.css  script.outbound-links.file-downloads.js  style.css
static/: CNAME  style.css
templates/: 404.html  base.html  contribute.html  download.html  faq.html  feedback.html  imprint.html  index.html  privacy.html  supported-devices.html
